[gd_scene load_steps=5 format=3 uid="uid://dwa71k4xfaupc"]

[ext_resource type="Shader" uid="uid://b8j4hitdd17i1" path="res://Scripts/Shaders/card_perspective.gdshader" id="1_2sotf"]
[ext_resource type="Script" uid="uid://wcpp0kx6asg5" path="res://Scripts/Consumable/consumable_icon.gd" id="1_bsnkm"]
[ext_resource type="PackedScene" uid="uid://bfditmacevklt" path="res://Scenes/Effects/ConsumableExplosion.tscn" id="3_mm84c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2sotf"]
shader = ExtResource("1_2sotf")
shader_parameter/tilt = 0.0
shader_parameter/glow_intensity = 0.0
shader_parameter/glow_color = Color(1, 1, 0.4, 1)
shader_parameter/x_rot = 0.0
shader_parameter/y_rot = 0.0

[node name="ConsumableIcon" type="Control"]
material = SubResource("ShaderMaterial_2sotf")
custom_minimum_size = Vector2(80, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1200.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_bsnkm")
explosion_effect_scene = ExtResource("3_mm84c")

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.313726)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="CardFrame" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardInfo" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 0

[node name="Title" type="Label" parent="CardInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="SellButton" type="Button" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 33.0
grow_horizontal = 0
text = "SELL
"

[node name="UseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -15.0
offset_right = 43.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
text = "BUY"

[node name="LabelBg" type="PanelContainer" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -37.0
grow_horizontal = 2

[node name="HoverLabel" type="Label" parent="LabelBg"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="UseButton" to="." method="_on_use_button_pressed"]
